[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/spritesheets/PlayerOverworldWalkingSprites.png" type="Texture" id=1]
[ext_resource path="res://src/PlayerCharacter/PlayerCharacter.gd" type="Script" id=2]
[ext_resource path="res://assets/images/jump_shadow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "TurnDown"
length = 0.05
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "TurnLeft"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.07177 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=27]
resource_name = "TurnRight"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "TurnUp"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_turning"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkDown"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 3, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkLeft"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 2, 5, 2 ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkRight"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 2, 5, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkUp"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 1, 4, 1 ]
}

[sub_resource type="Animation" id=38]
resource_name = "jumping"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -16 ), Vector2( 0, -4 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "TurnLeft"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "TurnRight"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "TurnDown"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "TurnUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 250, 106 )
states/Turn/node = SubResource( 33 )
states/Turn/position = Vector2( 345, 182 )
states/Walk/node = SubResource( 20 )
states/Walk/position = Vector2( 434, 106 )
transitions = [ "Idle", "Walk", SubResource( 21 ), "Walk", "Idle", SubResource( 22 ), "Turn", "Idle", SubResource( 34 ), "Idle", "Turn", SubResource( 35 ), "Turn", "Walk", SubResource( 36 ), "Walk", "Turn", SubResource( 37 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 38.3874 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[node name="Player" type="KinematicBody2D"]
collision_mask = 62
script = ExtResource( 2 )

[node name="JumpShadow" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -4 )
flip_h = true
hframes = 3
vframes = 2
frame = 3

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/TurnDown = SubResource( 25 )
anims/TurnLeft = SubResource( 26 )
anims/TurnRight = SubResource( 27 )
anims/TurnUp = SubResource( 28 )
anims/WalkDown = SubResource( 7 )
anims/WalkLeft = SubResource( 8 )
anims/WalkRight = SubResource( 9 )
anims/WalkUp = SubResource( 10 )
anims/jumping = SubResource( 38 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 16, 8 )
current = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 24 )
parameters/Idle/blend_position = Vector2( -0.00350261, 0.976879 )
parameters/Turn/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="BlockingRaycast" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 6

[node name="DoorRaycast" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="LedgeRayCast" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 4

[node name="InteractableRayCast" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="CutTreeRayCast" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false
